# terramorph

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  auth.py  credentials.py  encryption.py  exceptions.py  logging.py  ssrf.py  validation.py
backend/app/discovery/: __init__.py  apigateway.py  armor.py  artifact_registry.py  base.py  bigquery.py  bigtable.py  cloudrun.py  composer.py  compute.py  compute_disk.py  compute_image.py  compute_reservation.py  compute_route.py  compute_snapshot.py  custom_roles.py  dataflow.py  dns.py  dns_policy.py  filestore.py  firewall.py  functions.py  gke.py  health_check.py  iam.py  iam_bindings.py  instance_group.py  instance_template.py  kms.py  loadbalancer.py  logging_sinks.py  monitoring.py  nat.py  network.py  orchestrator.py  pubsub.py  redis.py  scheduler.py  secrets.py  spanner.py  (+8 more)
backend/app/generation/: __init__.py  fmt.py  hcl_renderer.py  import_generator.py
backend/app/models/: __init__.py  discovery.py  generation.py  resources.py
backend/app/services/: ai_cleaner.py  ai_settings.py  aws_credentials.py  bulk_export.py  drift.py  persistence.py  stats.py
backend/tests/: __init__.py  conftest.py  test_discovery.py  test_generation.py
cli/: Cargo.toml  Dockerfile
cli/src/: main.rs
cli/src/client/: mod.rs
cli/src/commands/: discover.rs  drift.rs  generate.rs  health.rs  mod.rs  status.rs
cli/src/output/: formatter.rs
(+143 files in other folders)
