[package]
name = "terramorph"
version = "0.1.0"
edition = "2021"
description = "Terramorph CLI - Reverse Terraform for GCP"
license = "MIT"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tabled = "0.16.0"
colored = "2.1.0"
indicatif = "0.17.8"

[profile.release]
opt-level = 3
lto = true
strip = true
